# fantasy-footbal-catalog

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  license.txt  manage.py  pyproject.toml  requirements.txt  setup.py
.scripts/: docker-build.sh  uv.sh
fantasy_football_catalog/: asgi.py  celery_app.py  settings.py  urls.py  wsgi.py
fantasy_football_catalog/apps/catalog/: apps.py  models.py  tasks.py
fantasy_football_catalog/apps/catalog/migrations/: 0001_initial.py
rabbitmq/data/: .erlang.cookie
rabbitmq/data/mnesia/rabbit@my-rabbit/: rabbit_durable_exchange.DCD  rabbit_durable_queue.DCD  rabbit_durable_queue.DCL  rabbit_durable_route.DCD  rabbit_runtime_parameters.DCD  rabbit_user.DCD  rabbit_user_permission.DCD  rabbit_vhost.DCD
rabbitmq/data/mnesia/rabbit@my-rabbit/msg_stores/vhosts/628WB79CIFDYO9LJI6DKMI09L/: recovery.dets
rabbitmq/data/mnesia/rabbit@my-rabbit/msg_stores/vhosts/628WB79CIFDYO9LJI6DKMI09L/msg_store_persistent/: clean.dot  file_summary.ets  msg_store_index.ets
rabbitmq/data/mnesia/rabbit@my-rabbit/msg_stores/vhosts/628WB79CIFDYO9LJI6DKMI09L/msg_store_transient/: file_summary.ets  msg_store_index.ets
tests/: conftest.py
tests/apps/catalog/: test_models.py
