[project]
name = "fantasy-football-catalog"
version = "0.1.0"
description = "Catalog your fantasy football teams!"
requires-python = ">=3.13"
dependencies = [
    "Django==4.1.6",
    "celery==5.3",
    "redis==4.3.4",
    "django-redis==5",
    "django-cache==0.3",
    "django-celery-results==2.4.0",
]
classifiers = [
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "License :: OSI Approved :: MIT License",
]

[project.optional-dependencies]
dev = [
    "pytest==7.2.1",
    "pytest-django==4.5.2",
    "ipdb==0.13.11",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude = ["tests*"]
